<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/school_name"
        android:text="@string/default_school_name"
        android:textSize="32sp"
        android:padding="8dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/num_of_sat_test_takers"
        android:text="@string/num_of_sat_test_takers"
        style="@style/DetailTextView"
        android:background="@drawable/top_border_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/school_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sat_critical_reading_avg_score"
        android:text="@string/sat_critical_reading_avg_score"
        style="@style/DetailTextView"
        android:background="@drawable/top_border_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/num_of_sat_test_takers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sat_math_avg_score"
        android:text="@string/sat_math_avg_score"
        style="@style/DetailTextView"
        android:background="@drawable/top_border_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/sat_critical_reading_avg_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sat_writing_avg_score"
        android:text="@string/sat_writing_avg_score"
        style="@style/DetailTextView"
        android:background="@drawable/top_border_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/sat_math_avg_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>